[gd_scene load_steps=6 format=3 uid="uid://cdl3j40ih58fc"]

[ext_resource type="Script" uid="uid://dp6t60wu1nt45" path="res://Scripts/Session/hypno_scene.gd" id="1_lcxrx"]
[ext_resource type="Script" uid="uid://djp2alolwjf37" path="res://Scripts/Session/subliminal.gd" id="2_byw8y"]
[ext_resource type="Script" uid="uid://kwedc6vfxl4f" path="res://Scripts/Session/session_canvas.gd" id="2_hltvx"]
[ext_resource type="Script" uid="uid://dme4gk77yds86" path="res://Scripts/Session/session_audio_player.gd" id="4_hefst"]
[ext_resource type="Script" uid="uid://cm6itcr1aubap" path="res://Scripts/Session/audio_gen.gd" id="5_87e5b"]

[node name="HypnoScene" type="Node2D"]
script = ExtResource("1_lcxrx")

[node name="SessionCanvas" type="CanvasLayer" parent="."]
script = ExtResource("2_hltvx")

[node name="SubliminalLabel" type="Label" parent="SessionCanvas"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -11.5
offset_right = 85.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "You are getting sleepy"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_byw8y")

[node name="DebugLabel" type="Label" parent="SessionCanvas"]
offset_right = 40.0
offset_bottom = 23.0

[node name="InteractLabel" type="Label" parent="SessionCanvas"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = 62.0
offset_right = 142.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
text = "Press the A key"
horizontal_alignment = 1

[node name="SessionAudioPlayer" type="AudioStreamPlayer" parent="SessionCanvas"]
script = ExtResource("4_hefst")

[node name="AudioGen" type="AudioStreamPlayer" parent="SessionCanvas"]
script = ExtResource("5_87e5b")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MainMenuButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1039.0
offset_top = 14.0
offset_right = 1135.0
offset_bottom = 63.0
grow_horizontal = 0
text = "Main Menu"

[connection signal="pressed" from="MainMenuButton" to="." method="_handle_main_menu_button_pressed"]
